style.css
/* Dropdown Button */
.dropbtn {
    background-color: #04AA6D;
    color: white;
    padding: 16px;
    font-size: 16px;
    border: none;
  }
  
  
  .dropdown {
    position: relative;
    display: inline-block;
  }
  
   /* Dropdown Content (Hidden by Default) */
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  
  /* Links inside the dropdown */
   .dropdown-content a {
     color: black; 
    padding: 12px 16px;
    text-decoration: none;
    display: block; 
  }

  #card1 {
    position:relative;
    left: 288px;
    bottom:311px;
  }
  
  #card2 {
   position:relative;
   left:576px;
   bottom:622px;
  }
  #card3 {
    position:relative;
    left:864px;
    bottom:935px;
  }
  #card4 {
    position:relative;
    left:1152px;
    bottom:1247px;
  }
  #card5 {
    position:relative;
    left:288px;
    bottom:1200px;
  }
  
  /* Change color of dropdown links on hover */
  .dropdown-content a:hover {background-color: #ddd;}
  
  /* Show the dropdown menu on hover */
  .dropdown:hover .dropdown-content {display: block;}
  
  /* Change the background color of the dropdown button when the dropdown content is shown */
  .dropdown:hover .dropbtn {background-color: #3e8e41;}

